fix glassmorphic box appearance on mobile

--- a/components/Splash.module.scss
+++ b/components/Splash.module.scss
@@ -1,7 +1,7 @@
 @import '../styles/mixins.scss';
 
 .container {
-  @include animated-bg;
+  @include gradient-bg;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -9,6 +9,8 @@
 }
 
 .center {
-  @include glassmorphic;
-  padding: 80px;
+  @media (min-width: 600px) {
+    @include glassmorphic;
+    padding: 30px;
+  }
 }
