--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -53,6 +53,15 @@
   }
 }
 
+@mixin gradient-bg {
+  background: rgb(244, 173, 6);
+  background: linear-gradient(
+    350deg,
+    rgba(244, 173, 6, 1) 0%,
+    rgba(229, 251, 31, 1) 80%
+  );
+}
+
 @mixin drop-shadow-lg {
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.27);
 }
@@ -66,6 +75,6 @@
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(12.5px);
   -webkit-backdrop-filter: blur(12.5px);
-  border-radius: 50px;
+  border-radius: 40px;
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
